재생 모드 조정 기능

--- a/templates/popup.html
+++ b/templates/popup.html
@@ -15,6 +15,16 @@
         <small>Keyword Mode</small>
       </label>
 
+      <div class="abgm-inline" style="min-width:240px;">
+  <small style="opacity:.85;">Play Mode</small>
+  <select id="abgm_playMode" class="abgm-select abgm-select-slim" title="Works when Keyword Mode is OFF">
+    <option value="manual">Manual</option>
+    <option value="loop_one">Loop One</option>
+    <option value="loop_list">Loop List</option>
+    <option value="random">Random</option>
+  </select>
+</div>
+
       <div class="abgm-inline">
         <small style="opacity:.85;">Global Volume</small>
         <input id="abgm_globalVol" type="range" min="0" max="100" value="70" class="abgm-range">
