--- a/templates/popup.html
+++ b/templates/popup.html
@@ -14,6 +14,10 @@
         <input type="checkbox" id="abgm_keywordMode">
         <small>Keyword Mode</small>
       </label>
+      <label class="checkbox_label" style="margin:0;">
+        <input type="checkbox" id="abgm_debugMode">
+        <small>Debug Mode</small>
+      </label>
 
       <div class="abgm-inline" style="min-width:240px;">
         <small style="opacity:.85;">Play Mode</small>
