Remove labels from help and settings buttons

--- a/templates/window.html
+++ b/templates/window.html
@@ -11,7 +11,6 @@
       <div class="autobgm-menublock">
         <div id="autobgm_help_toggle" class="menu_button autobgm-menu-btn" title="Help">
           <i class="fa-solid fa-book"></i>
-          <span class="autobgm-menu-label">사용방법</span>
         </div>
 
         <div id="autobgm_help_text" class="autobgm-helptext" style="display:none;">
@@ -32,9 +31,8 @@
       <!-- 3) Enabled 버튼 -->
       <div class="autobgm-menublock" style="margin-top:10px;">
         <div id="autobgm_enabled_btn" class="menu_button autobgm-menu-btn" title="Enabled">
-          <i class="fa-solid fa-power-off"></i>
-          <span class="autobgm-menu-label">Enabled</span>
-          <span id="autobgm_enabled_state" class="autobgm-menu-state">Off</span>
+          <i id="autobgm_enabled_icon" class="fa-solid fa-power-off"></i>
+          <span id="autobgm_enabled_state" class="autobgm-menu-state">(현재 Off)</span>
         </div>
       </div>
 
@@ -42,7 +40,6 @@
       <div class="autobgm-menublock" style="margin-top:8px;">
         <div id="autobgm_open" class="menu_button autobgm-menu-btn" title="Settings">
           <i class="fa-solid fa-gear"></i>
-          <span class="autobgm-menu-label">Settings</span>
         </div>
       </div>
 
