--- a/templates/window.html
+++ b/templates/window.html
@@ -32,7 +32,7 @@
       <div class="autobgm-menublock" style="margin-top:10px;">
         <div id="autobgm_enabled_btn" class="menu_button autobgm-menu-btn" title="Enabled">
           <i id="autobgm_enabled_icon" class="fa-solid fa-power-off"></i>
-          <span id="autobgm_enabled_state" class="autobgm-menu-state">(현재 Off)</span>
+          <span id="autobgm_enabled_state" class="autobgm-menu-state">Off</span>
         </div>
       </div>
 
